PLT-8068 - Fixing channel menu items on mobile

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -963,7 +963,8 @@
                 }
 
                 > li {
-                    > a {
+                    > a,
+                    > button {
                         border-bottom: 1px solid alpha-color($white, .3);
                         color: $white;
                         font-weight: 600;
